--- a/style.css
+++ b/style.css
@@ -14,23 +14,71 @@ html, body {
     position: absolute;
   }
 
-  .btn-1 { 
+:root {
+  --bubble-color: hsla(210, 50%, 85%, 1);
+}
+
+* {
+  box-sizing: border-box;
+}
+
+button {
+  position:relative;
+  padding: 10px 20px;  
+  cursor: pointer;
+
+  overflow: hidden;   
+}
+
+/* bubbles */
+button::before {
+  content: '';
+  pointer-events: none;
+  opacity: .7;
+  background:
+    radial-gradient(circle at 20% 35%,  transparent 0,  transparent 2px, var(--bubble-color) 3px, var(--bubble-color) 4px, transparent 4px),
+    radial-gradient(circle at 75% 44%, transparent 0,  transparent 2px, var(--bubble-color) 3px, var(--bubble-color) 4px, transparent 4px),
+    radial-gradient(circle at 46% 52%, transparent 0, transparent 4px, var(--bubble-color) 5px, var(--bubble-color) 6px, transparent 6px);
+
+  width: 100%;
+  height: 300%;
+  top: 0;
+  left: 0;
+  position: absolute;
+  animation: bubbles 5s linear infinite both;
+}
+
+@keyframes bubbles {
+  from {
+    transform: translate();
+  }
+  to {
+    transform: translate(0, -66.666%);
+  }
+}
+
+.btn-1 { 
     background-image: url(Images/Play.png); 
     top: 330px; 
-    padding: 50px 100px;}
+    padding: 50px 100px;
+    /* border: 2px solid white; */
+    
+  }
 
   .btn-2 { 
     background-image: url(Images/Instructions.png); 
     top: 450px; 
-    padding: 50px 260px;}
+    padding: 50px 260px;
+  }
 
   .btn-3 { 
     background-image: url(Images/Back.png); 
     top: 600px; 
-    padding: 40px 70px;}
+    padding: 40px 70px;
+  }
   
   .buttonContainer {
-    display: flex; /* or display:grid */
+    display: flex; 
     justify-content: center;
   }
   .btn-4 { 
